# icy_engine_egui

./: Cargo.toml  README.md
i18n/de/: icy_engine_egui.ftl
i18n/en/: icy_engine_egui.ftl
src/: lib.rs
src/animations/: animator.rs
src/ui/: keymaps.rs  mod.rs  smooth_scroll.rs
src/ui/buffer_view/: glerror.rs  mod.rs  output_renderer.rs  output_renderer.shader.frag  sixel_renderer.rs  terminal_renderer.rs  terminal_renderer.shader.frag  texture_renderer.rs
src/ui/settings/: mod.rs
