[package]
name = "icy_engine_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { git ="https://github.com/mkrueger/icy_engine" }
#icy_engine = { path = "../icy_engine" }
egui = "0.22.0"
egui_glow = "0.22.0"
image = { version = "0.24", features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "jpeg_rayon", "openexr", "qoi"] }
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
lazy_static = "1.4.0"

glow = "0.12.2"
web-time = "0.2.0"
log = "0.4"

i18n-embed = { version = "0.14.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.7.0"
rust-embed = "8.0.0"
once_cell = "1.16.0"
serde = { version = "1", features = ["derive"] }
mlua = { version = "0.9.1", features = ["lua54", "vendored"] }
regex = "1.9.5"
