[package]
name = "icy_engine_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ui", "animations"]
ui = ["egui", "egui_glow", "glow", "eframe", "image", "i18n-embed", "i18n-embed-fl", "rust-embed", "once_cell"]
animations = []

[dependencies]
icy_engine = { git ="https://github.com/mkrueger/icy_engine", features = ["minimal"], default-features = false }
#icy_engine = { path = "../icy_engine", features = ["minimal"], default-features = false}
serde = { version = "1", features = ["derive"] }
mlua = { version = "0.9.1", features = ["lua54", "vendored"] }

egui = { version = "0.23.0", optional = true }
egui_glow =  { version = "0.23.0", optional = true }
image = { version = "0.24", features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "jpeg_rayon", "openexr", "qoi"], optional = true }
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
], optional = true }
lazy_static = "1.4.0"

glow =  { version = "0.12.2", optional = true }
web-time = "0.2.0"
log = "0.4"

i18n-embed = { version = "0.14.0", features = ["fluent-system", "desktop-requester"] , optional = true} 
i18n-embed-fl = { version = "0.7.0" , optional = true} 
rust-embed = { version = "8.0.0", optional = true} 
once_cell = { version = "1.16.0", optional = true} 
regex = "1.9.5"
